GROOVY-10747: Fix illegal access for object clone on JDK16+ (#1781)
* GROOVY-10747: Fix illegal access for object clone on JDK16+

* Minor tweak

(cherry picked from commit 2de43441ca85ed2278de976b02daac18a242f84c)